[gd_scene load_steps=4 format=2]

[ext_resource path="res://baddies/controller.gd" type="Script" id=1]
[ext_resource path="res://baddies/player_detection.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=2]
radius = 500.0

[node name="controller" type="Node2D"]
process_priority = -1
script = ExtResource( 1 )

[node name="player_detection" type="Area2D" parent="."]
collision_layer = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detection"]
shape = SubResource( 2 )

[node name="shoot_cooldown" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5

[connection signal="body_entered" from="player_detection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="player_detection" to="." method="_on_player_detection_body_exited"]
[connection signal="timeout" from="shoot_cooldown" to="." method="_on_shoot_cooldown_timeout"]
